tests/snapshots/run_wpt_conformance__onnx_layerNormalization_float32_4D_tensor_options_epsilon.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "layer_normalization.https.any.js",
    "layerNormalization float32 4D tensor options.epsilon",
    "onnx",
    "PASS",
)
